--- a/food-truck-trackr/src/App.css
+++ b/food-truck-trackr/src/App.css
@@ -5,14 +5,27 @@
 }
 
 .App {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  display:flex;
+  flex-flow: column;
   min-height: 100vh;
+  align-items: center;
+  justify-content: center;
   background-color: floralwhite;
 }
 
-.title-container {
+.nav {
+  display: flex;
+  justify-content: space-around;
+  width: 50%;
+}
+
+a {
   color: orangered;
+  font-size: 1.5rem;
+}
+
+.title-container {
+  color:orangered;
   font-size: 2rem;
+  width: 50%;
 }
