--- a/food-truck-trackr/src/App.css
+++ b/food-truck-trackr/src/App.css
@@ -13,10 +13,18 @@
   background-color: floralwhite;
 }
 
-.nav {
+.nav-top {
   display: flex;
   justify-content: space-around;
   width: 50%;
+  border-bottom: 3px solid orangered;
+}
+
+.nav-bottom {
+  display: flex;
+  justify-content: space-around;
+  width: 50%;
+  border-top: 3px solid orangered;
 }
 
 a {
