--- a/food-truck-trackr/src/Components/SignUp.css
+++ b/food-truck-trackr/src/Components/SignUp.css
@@ -11,6 +11,11 @@
     align-items: center;
 }
 
+.error-container {
+    font-size: 1.5rem;
+    color: red;
+}
+
 .input-container {
     display: flex;
     flex-flow: column;
@@ -25,6 +30,7 @@ label {
     flex-flow: column;
     align-items: center;
     justify-content: center;
+    padding: 2%;
     margin: 1%;
     color: orangered;
 }
