--- a/food-truck-trackr/src/App.css
+++ b/food-truck-trackr/src/App.css
@@ -18,7 +18,7 @@
   justify-content: space-around;
   width: 50%;
   padding-bottom: 1%;
-  border-bottom: 3px solid orangered;
+  border-bottom: 3px solid rgba(255, 68, 0, 0.5);
 }
 
 .nav-top a:hover {
@@ -31,7 +31,7 @@
   justify-content: space-around;
   width: 50%;
   padding-top: 1%;
-  border-top: 3px solid orangered;
+  border-top: 3px solid rgba(255, 68, 0, 0.5);
 }
 
 .nav-bottom a:hover {
